finished integrating Joergs feedback

--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -529,7 +529,6 @@ Knowledge check
 
     {% if "3PR" in player.treatment %}
 
-
         <div class='responsive-div'>
 
             <p> If <b>Person C</b> would give <b>3 point(s)</b> to <b>Person A</b> in Stage 2, <b>what would be the effect?</b>  </p>
@@ -547,6 +546,21 @@ Knowledge check
         <hr>
 
         </div>
+
+    <div class="reminder">
+
+        <p style="text-align: center; ">
+            <b>Reminder</b>
+        </p>
+
+        <div style="margin-left: 5%;">
+
+            <p> <b>Person C</b> is able to <strong>give points</strong> to <strong>Person A</strong>. </p>
+
+            <p>Person C receives 4 points in Stage 2 and can use these points to give points to Person A. Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b> (cost of giving 1 point = 0.33 points).</p>
+        </div>
+    </div>
+
 
     {% endif %}
 
@@ -569,6 +583,21 @@ Knowledge check
         <hr>
 
         </div>
+
+    <div class="reminder">
+
+        <p style="text-align: center; ">
+            <b>Reminder</b>
+        </p>
+
+        <div style="margin-left: 5%;">
+
+            <p> <b>Person C</b> is able to <b>remove points</b> from <b>Person A <u>OR</u> give points</b> to <b>Person B</b>. Person C <u>cannot</u> both give points and remove points, they must choose <u>one</u> action. </p>
+
+            <p>Person C receives 4 points in Stage 2 and can use these points to remove or give points. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b> (cost of removing OR giving 1 point = 0.33 points).</p>
+        </div>
+    </div>
+
 
 {% endif %}
 
