--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -639,6 +639,16 @@
         position:relative;
     }
 
+    .reminder {
+        background-color: #e0f0ff;
+        color: #004080;
+        border: 1px solid #004080;
+        padding: 8px;
+        margin-top: 15px;
+        border-radius: 5px;
+        font-size: 14px;
+    }
+
     @media (max-width: 1200px) {
       .responsive-div {
         transform: scale(1.0); /* Scale to 80% for smaller screens */
@@ -1010,6 +1020,18 @@
 
         {% if "norm" in player.treatment %}
 
+        {% if "2PP" in player.treatment and player.round_number < 6 %}
+            <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person B is.</b> <br> <br>
+            <p style="font-size: 14px; ">
+                Importantly, you will receive <b>12 additional points</b> if your decisions are the same as the most
+                common decisions among all other participants in {{current_country}}. <br> <br>
+            </p>
+        {% endif %}
+
+        {% if "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
+            <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person C is.</b> <br> <br>
+        {% endif %}
+
         {% for TP_norm_decision in TP_norm_decisions %}
         <div class='responsive-div'>
             <div class="container {% if '2PP' in player.treatment %}short-container{% endif %}" data-index="{{ TP_norm_decision.index }}">
@@ -1096,7 +1118,7 @@
 
             {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment%}
                 <p style="font-size: 14px;">
-                    Person A lives in <b style="color: red;">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red;">{{ recip_identity_country }}</b>.
+                    Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>.
                 </p>
             {% endif %}
 
@@ -1176,14 +1198,25 @@
 <!--        {% endif %}-->
 
         {% if "2PP" in player.treatment %}
+
             <p style="text-align: center; ">
                 <b style="color: red; ">You are Person B!</b>
             </p>
+
+<!--            {% if player.round_number < 6 %}-->
+                <b> Now, you decide as Person B how many points to remove from Person A.</b> <br> <br>
+<!--            {% endif %}-->
+
         <br>
-        {% else %}
+        {% endif %}
+
+        {% if "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
             <p style="text-align: center; ">
                 <b style="color: red;">You are Person C!</b>
             </p>
+
+        <b> Now, you decide as Person C how many points to remove from Person A.</b> <br> <br>
+
         {% endif %}
 
         {% for TP_decision in TP_decisions %}
@@ -1279,7 +1312,7 @@
             </div>
 
                 {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment%}
-                    <p style="font-size: 14px;"> Person A lives in <b style="color: red;">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red;">{{ recip_identity_country }}</b>. </p>
+                    <p style="font-size: 14px;"> Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>. </p>
                 {% endif %}
 
                 <p style="font-size: 14px;"> Person A gave <strong> {{TP_decision.receiver}} </strong> point(s) to {{treatment_text_action_person2}} and kept <strong> {{TP_decision.dictator_keeps}} </strong> point(s) for themselves. </p>
@@ -1332,6 +1365,79 @@
             Next
         </button>
     </div>
+
+    {% if "2PP" in player.treatment or "3PP" in player.treatment or "3PR" in player.treatment or "3PC" in player.treatment %}
+
+    <br>
+
+            <div class="reminder">
+
+                    <p style="text-align: center; ">
+                        <b>Reminder</b>
+                    </p>
+
+                    <p> There are <strong>two stages</strong>. </p>
+
+                    <p> <b> Stage 1: </b> </p>
+
+                    <div style="margin-left: 5%;">
+
+                        <p><strong>Person A</strong> receives 12 points.<br>
+                                <strong>Person B</strong> receives 0 points.</p>
+
+                        <p><strong>Person A</strong> decides how many of the 12 points to give to Person B.</p>
+
+                    </div>
+
+                    <p> <b>Stage 2:</b> </p>
+
+                    {% if "2PP" in player.treatment %}
+
+                        <div style="margin-left: 5%;">
+
+                            <p> <b>Person B</b> is able to <strong>remove points</strong> from <strong>Person A</strong>. </p>
+
+                            <p>Person A and Person B both receive 4 points in Stage 2. Only Person B can use these points to remove points from Person A. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person B <b>1 point</b> (cost of removing 1 point = 0.33 points).</p>
+                        </div>
+
+                    {% endif %}
+
+                    {% if "3PP" in player.treatment %}
+
+                        <div style="margin-left: 5%;">
+
+                            <p> <b>Person C</b> is able to <strong>remove points</strong> from <strong>Person A</strong>. </p>
+
+                            <p>Person C receives 4 points in Stage 2 and can use these points to remove points from Person A. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person C <b>1 point</b> (cost of removing 1 point = 0.33 points).</p>
+                        </div>
+
+                    {% endif %}
+
+                    {% if "3PR" in player.treatment %}
+
+                        <div style="margin-left: 5%;">
+
+                            <p> <b>Person C</b> is able to <strong>give points</strong> to <strong>Person A</strong>. </p>
+
+                            <p>Person C receives 4 points in Stage 2 and can use these points to give points to Person A. Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b> (cost of giving 1 point = 0.33 points).</p>
+                        </div>
+
+                    {% endif %}
+
+                    {% if "3PC" in player.treatment %}
+
+                        <div style="margin-left: 5%;">
+
+                            <p> <b>Person C</b> is able to <b>remove points</b> from <b>Person A <u>OR</u>give points</b> to <b>Person B</b>. Person C <u>cannot</u> both give points and remove points, they must choose <u>one</u> action.</p>
+
+                            <p>Person C receives 4 points in Stage 2 and can use these points to remove or give points. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b> (cost of removing OR giving 1 point = 0.33 points).</p>
+                        </div>
+
+                    {% endif %}
+
+                </div>
+        {% endif %}
+
 
 
     </form>
