finished integrating feedback from other lab members

--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -1,6 +1,6 @@
 {{ block title }}
 
-Knowledge check
+<p style="text-align: center; font-size: 26px;  "> Knowledge check </p>
 
 {{ endblock }}
 {{ block content }}
@@ -521,7 +521,7 @@ Knowledge check
 
                     <p> <b>Person B</b> is able to <strong>remove points</strong> from <strong>Person A</strong>. </p>
 
-                    <p>Person A and Person B both receive 4 points in Stage 2. Only Person B can use these points to remove points from Person A. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person B <b>1 point</b> (cost of removing 1 point = 0.33 points).</p>
+                    <p>Person A and Person B both receive 4 points in Stage 2. Only Person B can use these points to remove points from Person A. Only Person A's remaining points from Stage 1 can be removed. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person B <b>1 point</b> (cost of removing 1 point: 0.33 points).</p>
                 </div>
             </div>
 
@@ -557,7 +557,7 @@ Knowledge check
 
             <p> <b>Person C</b> is able to <strong>give points</strong> to <strong>Person A</strong>. </p>
 
-            <p>Person C receives 4 points in Stage 2 and can use these points to give points to Person A. Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b> (cost of giving 1 point = 0.33 points).</p>
+            <p>Person C receives 4 points in Stage 2 and can use these points to give points to Person A. Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b> (cost of giving 1 point: 0.33 points).</p>
         </div>
     </div>
 
@@ -592,9 +592,9 @@ Knowledge check
 
         <div style="margin-left: 5%;">
 
-            <p> <b>Person C</b> is able to <b>remove points</b> from <b>Person A <u>OR</u> give points</b> to <b>Person B</b>. Person C <u>cannot</u> both give points and remove points, they must choose <u>one</u> action. </p>
+            <p> <b>Person C</b> is able to <u>either</u> <b>remove points</b> from <b>Person A <u>or</u> give points</b> to <b>Person B</b>. Person C <u>cannot</u> both give points and remove points, they must choose <u>one</u> action. </p>
 
-            <p>Person C receives 4 points in Stage 2 and can use these points to remove or give points. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b> (cost of removing OR giving 1 point = 0.33 points).</p>
+            <p>Person C receives 4 points in Stage 2 and can use these points to remove or give points. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b> (cost of removing OR giving 1 point: 0.33 points).</p>
         </div>
     </div>
 
