--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -1,34 +1,40 @@
 {{ block title }}
 
-Study overview and bonus points
+<p style="text-align: center; font-size: 26px;  "> Bonus points </p>
 
 {{ endblock }}
 {{ block content }}
 
 <div>
+
     <p>
-        In addition to the Toluna points you will receive for participating, you can receive <b> bonus points</b>.
-        Bonus points are determined by your decisions and the decisions of others who are also participating in the study.
-        At the end of the study, the points you collected will be converted into Toluna points using the following conversion rate:
+        This study is about decision-making. Throughout the study, you will be paired with other participants who are also taking part in the study.
+    </p>
+
+    <p>
+        In addition to the Toluna points you receive for participating, you can receive <b> bonus points</b> based on <b>your own</b> <u>and</u> <b>other participants'</b> decisions.
+        At the end of the study, the bonus points you collected will be converted into Toluna points at the following conversion rate:
     </p>
     <p>
         1 point = {{ session.real_world_currency_per_point }} Toluna points
     </p>
     <p>
         You will make decisions in different <b>situations</b> and in different <b>roles</b>. At the end of the study,
-        one situation and one role will be chosen at random and your bonus points will be determined
-        by your own and others' decisions in this situation. Since you do not know which decision counts
-        for your extra points, you should treat each decision as if it would be the one that counts.
-
+        <b> <u>one</u> situation</b> and <b> <u>one</u> role</b> will be randomly selected to <b>determine your bonus points</b>. Since you will not know
+        in advance which decision will count, you should <b>treat each decision as if it is selected</b>.
     </p>
-    <p>
-        Your anonymity is guaranteed during the whole study, to both the other participants and the researchers.
-    <p>
 
     <p>
-        Please read the instructions carefully, as the points you collect during the study will impact your Toluna points and those of other participants.
-    <p>
+        Bonus points are calculated once all participants have completed the study.
+    </p>
+
+    <b>
+        Please read the instructions carefully, as your decisions affect not only your own Toluna points but also those of other participants.
+    </b>
 </div>
+
+
+
 
 <!--    <div style="display: flex; justify-content: flex-end">-->
 <!--      {% next_button %}-->
