--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1,5 +1,7 @@
 {{ block title }}
 
+<p style="text-align: center; font-size: 26px;  "> Decision {{player.round_number}} </p>
+
 {{ endblock }}
 {{ block content }}
 
@@ -1023,7 +1025,7 @@
         {% if "2PP" in player.treatment and player.round_number < 6 %}
             <b> Now, you decide how <b style="color: red;">socially appropriate</b> the decision of Person B is.</b> <br> <br>
             <p style="font-size: 14px; ">
-                Importantly, you will receive <b>12 additional points</b> if your decisions are the same as the most
+                Importantly, you will receive an <b>extra bonus of 10 points</b> if your decisions are the same as the most
                 common decisions among all other participants in {{current_country}}. <br> <br>
             </p>
         {% endif %}
@@ -1116,15 +1118,22 @@
 
             </div>
 
-            {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment%}
+            {% if "IN" in player.treatment or "OUT" in player.treatment%}
                 <p style="font-size: 14px;">
                     Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>.
                 </p>
             {% endif %}
 
+            {% if "country" in player.treatment %}
+                <p style="font-size: 14px;">
+                    Person A lives in <b style="color: red; ">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red; ">{{ recip_identity_country }}</b>.
+                </p>
+            {% endif %}
+
+
             <p style="font-size: 14px;">
-                Person A gave <strong> {{TP_norm_decision.receiver}} </strong> point(s) to Person B
-                and kept <strong> {{TP_norm_decision.dictator_keeps}} </strong> point(s) for themselves.
+                Person A gave <b> {{TP_norm_decision.receiver }} point(s)</b> to Person B
+                and kept <b> {{TP_norm_decision.dictator_keeps }} point(s)</b> for themselves.
             </p>
 
             <p>
@@ -1203,10 +1212,6 @@
                 <b style="color: red; ">You are Person B!</b>
             </p>
 
-<!--            {% if player.round_number < 6 %}-->
-                <b> Now, you decide as Person B how many points to remove from Person A.</b> <br> <br>
-<!--            {% endif %}-->
-
         <br>
         {% endif %}
 
@@ -1215,7 +1220,17 @@
                 <b style="color: red;">You are Person C!</b>
             </p>
 
-        <b> Now, you decide as Person C how many points to remove from Person A.</b> <br> <br>
+            {% if "3PC" in player.treatment %}
+                <p style="font-size: 14px;"> Keep in mind that you can <u>either</u> <b>remove points</b> from <b>Person A <u>or</u> give points</b> to <b>Person B</b>. </p> <br>
+            {% endif %}
+
+        {% endif %}
+
+        {% if "2PP" in player.treatment or "3PP" in player.treatment %}
+
+            <b> Now, you decide as Person C how many points to remove from Person A.</b> <br>
+
+            <p> Below are three different possible decisions of Person A. </p> <br>
 
         {% endif %}
 
@@ -1311,11 +1326,17 @@
 
             </div>
 
-                {% if "country" in player.treatment or "IN" in player.treatment or "OUT" in player.treatment%}
+                {% if "IN" in player.treatment or "OUT" in player.treatment%}
                     <p style="font-size: 14px;"> Person A lives in <b >{{ dic_identity_country }}</b> and Person B lives in <b >{{ recip_identity_country }}</b>. </p>
                 {% endif %}
 
-                <p style="font-size: 14px;"> Person A gave <strong> {{TP_decision.receiver}} </strong> point(s) to {{treatment_text_action_person2}} and kept <strong> {{TP_decision.dictator_keeps}} </strong> point(s) for themselves. </p>
+                {% if "country" in player.treatment %}
+                    <p style="font-size: 14px;">
+                        Person A lives in <b style="color: red; ">{{ dic_identity_country }}</b> and Person B lives in <b style="color: red; ">{{ recip_identity_country }}</b>.
+                    </p>
+                {% endif %}
+
+                <p style="font-size: 14px;"> Person A gave <b> {{TP_decision.receiver }} point(s)</b> to {{treatment_text_action_person2}} and kept <b> {{TP_decision.dictator_keeps }} point(s) </b> for themselves. </p>
 
                 <div class='numbers'>
                     <p>  <strong>As {{treatment_text_action_person}}, how many points do you <b style="color: red;"> {{ treatment_text_action }} </b>  {{ treatment_text_receiver }}? </strong> </p>
@@ -1397,7 +1418,7 @@
 
                             <p> <b>Person B</b> is able to <strong>remove points</strong> from <strong>Person A</strong>. </p>
 
-                            <p>Person A and Person B both receive 4 points in Stage 2. Only Person B can use these points to remove points from Person A. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person B <b>1 point</b> (cost of removing 1 point = 0.33 points).</p>
+                            <p>Person A and Person B both receive 4 points in Stage 2. Only Person B can use these points to remove points from Person A. Only Person A's remaining points from Stage 1 can be removed. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person B <b>1 point</b> (cost of removing 1 point: 0.33 points).</p>
                         </div>
 
                     {% endif %}
@@ -1408,7 +1429,7 @@
 
                             <p> <b>Person C</b> is able to <strong>remove points</strong> from <strong>Person A</strong>. </p>
 
-                            <p>Person C receives 4 points in Stage 2 and can use these points to remove points from Person A. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person C <b>1 point</b> (cost of removing 1 point = 0.33 points).</p>
+                            <p>Person C receives 4 points in Stage 2 and can use these points to remove points from Person A. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A will cost Person C <b>1 point</b> (cost of removing 1 point: 0.33 points).</p>
                         </div>
 
                     {% endif %}
@@ -1419,7 +1440,7 @@
 
                             <p> <b>Person C</b> is able to <strong>give points</strong> to <strong>Person A</strong>. </p>
 
-                            <p>Person C receives 4 points in Stage 2 and can use these points to give points to Person A. Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b> (cost of giving 1 point = 0.33 points).</p>
+                            <p>Person C receives 4 points in Stage 2 and can use these points to give points to Person A. Giving <b>3 points</b> to Person A will cost Person C <b>1 point</b> (cost of giving 1 point: 0.33 points).</p>
                         </div>
 
                     {% endif %}
@@ -1428,9 +1449,9 @@
 
                         <div style="margin-left: 5%;">
 
-                            <p> <b>Person C</b> is able to <b>remove points</b> from <b>Person A <u>OR</u>give points</b> to <b>Person B</b>. Person C <u>cannot</u> both give points and remove points, they must choose <u>one</u> action.</p>
+                            <p> <b>Person C</b> is able to <u>either</u> <b>remove points</b> from <b>Person A <u>or</u> give points</b> to <b>Person B</b>. Person C <u>cannot</u> both give points and remove points, they must choose <u>one</u> action.</p>
 
-                            <p>Person C receives 4 points in Stage 2 and can use these points to remove or give points. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b> (cost of removing OR giving 1 point = 0.33 points).</p>
+                            <p>Person C receives 4 points in Stage 2 and can use these points to remove or give points. Removed points are eliminated and cannot be used by anyone. Removing <b>3 points</b> from Person A OR giving <b>3 points</b> to Person B will cost Person C <b>1 point</b> (cost of removing OR giving 1 point: 0.33 points).</p>
                         </div>
 
                     {% endif %}
