--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -4,7 +4,8 @@
 <!--        <img/>-->
 <!--    </div>-->
 
-    Welcome!
+
+<p style="text-align: center; font-size: 26px;  "> Welcome! </p>
 
 {% endblock %}
 
@@ -25,16 +26,19 @@
         You may withdraw at any time without penalty or loss of benefits to which you may be otherwise entitled.
     </p>
     <p>
-        By clicking "I Consent," you confirm that you have read the study description and give consent to participate.
+        Your anonymity is guaranteed throughout the whole study, both to other participants and researchers.
+    </p>
+    <p>
+        By clicking "I Consent," you confirm that you give consent to participate.
 
     </p>
     <p>
         For questions, concerns, or suggestions, please contact: <br>
-        <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a>, <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a> or <a href="mailto:gross@psychologie.uzh.ch"> gross@psychologie.uzh.ch </a>
+        <a href="mailto:charlotte.rossetti@uzh.ch"> charlotte.rossetti@uzh.ch </a> or <a href="mailto:caroline.graf@uzh.ch"> caroline.graf@uzh.ch </a>
     </p>
     <p>
-        Dr. Charlotte Rossetti, Dr. Caroline Graf and Dr. Jörg Gross <br>
-        University of Zürich, Switzerland <br>
+        Charlotte Rossetti, Caroline Graf and Jörg Gross <br>
+        University of Zurich, Switzerland <br>
 <!--        <img/>-->
     </p>
 </div>
